// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sidebar abbreviates durations under a minute 1`] = `
<nav
  className="sc-iBPRYJ jNbGZh Sidebar-resources"
>
  <div
    className="sc-fubCfw"
  >
    <div>
      <div
        className="sc-fFubgz hIGdYH"
      >
        
      </div>
      <ul
        className="sc-bkzZxe jjCdaj"
      >
        <li
          className="sc-bdfBwQ sc-crrsfI fKFkSC cKzMdO"
        >
          <a
            className="sc-pFZIQ sc-jrAGrp gITkdQ jSZySy isSelected"
            href="/"
            onClick={[Function]}
          >
            <div
              className="sc-gsTCUz gURyfg isNone"
            >
              <svg>
                checkmark-small.svg
              </svg>
            </div>
            <div
              className="sc-dQppl sc-bqyKva ffqbbn gTLxMz"
            >
              All
            </div>
          </a>
        </li>
      </ul>
    </div>
    <div>
      <div
        className="sc-fFubgz hIGdYH"
      >
        resources
      </div>
      <ul
        className="sc-bkzZxe jjCdaj"
      >
        <li
          className="sc-bdfBwQ fKFkSC  isBuilding"
        >
          <button
            className="sc-eCssSg bZRUpx"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-hKgILt diVeFN"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <a
            className="sc-pFZIQ gITkdQ  isBuilding"
            data-name="resource4"
            href="/r/resource4"
            onClick={[Function]}
          >
            <div
              className="sc-kEjbxe ikFKQb"
            >
              <div
                aria-describedby={null}
                className="sc-gsTCUz gURyfg isHealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Server: ready"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-dQppl sc-kstrdz ffqbbn fpKEWH"
                title="resource4"
              >
                <span
                  className="sc-hBEYos jsLRUj"
                >
                  resource4
                </span>
              </div>
              <span
                className="sc-fodVxV cOMzyj"
              >
                <time
                  dateTime="2017-12-21T15:36:03.000Z"
                  title="2017-12-21T15:36:03.000Z"
                >
                  &lt;5s ago
                </time>
              </span>
              <button
                className="sc-gKsewC ljQRUE SidebarTriggerButton 
          "
                disabled={true}
                onClick={[Function]}
                title="Cannot trigger an update while resource is updating or update is pending."
              />
            </div>
            <div
              className="sc-iqHYGH kQyqCY"
            >
              <div
                aria-describedby={null}
                className="sc-gsTCUz gURyfg isBuilding"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Update: in progress"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-dQppl ffqbbn"
              >
                Updating…
              </div>
            </div>
          </a>
        </li>
        <li
          className="sc-bdfBwQ fKFkSC  isBuilding"
        >
          <button
            className="sc-eCssSg bZRUpx"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-hKgILt diVeFN"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <a
            className="sc-pFZIQ gITkdQ  isBuilding"
            data-name="resource9"
            href="/r/resource9"
            onClick={[Function]}
          >
            <div
              className="sc-kEjbxe ikFKQb"
            >
              <div
                aria-describedby={null}
                className="sc-gsTCUz gURyfg isHealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Server: ready"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-dQppl sc-kstrdz ffqbbn fpKEWH"
                title="resource9"
              >
                <span
                  className="sc-hBEYos jsLRUj"
                >
                  resource9
                </span>
              </div>
              <span
                className="sc-fodVxV cOMzyj"
              >
                <time
                  dateTime="2017-12-21T15:35:58.000Z"
                  title="2017-12-21T15:35:58.000Z"
                >
                  &lt;15s ago
                </time>
              </span>
              <button
                className="sc-gKsewC ljQRUE SidebarTriggerButton 
          "
                disabled={true}
                onClick={[Function]}
                title="Cannot trigger an update while resource is updating or update is pending."
              />
            </div>
            <div
              className="sc-iqHYGH kQyqCY"
            >
              <div
                aria-describedby={null}
                className="sc-gsTCUz gURyfg isBuilding"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Update: in progress"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-dQppl ffqbbn"
              >
                Updating…
              </div>
            </div>
          </a>
        </li>
        <li
          className="sc-bdfBwQ fKFkSC  isBuilding"
        >
          <button
            className="sc-eCssSg bZRUpx"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-hKgILt diVeFN"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <a
            className="sc-pFZIQ gITkdQ  isBuilding"
            data-name="resource19"
            href="/r/resource19"
            onClick={[Function]}
          >
            <div
              className="sc-kEjbxe ikFKQb"
            >
              <div
                aria-describedby={null}
                className="sc-gsTCUz gURyfg isHealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Server: ready"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-dQppl sc-kstrdz ffqbbn fpKEWH"
                title="resource19"
              >
                <span
                  className="sc-hBEYos jsLRUj"
                >
                  resource19
                </span>
              </div>
              <span
                className="sc-fodVxV cOMzyj"
              >
                <time
                  dateTime="2017-12-21T15:35:48.000Z"
                  title="2017-12-21T15:35:48.000Z"
                >
                  &lt;30s ago
                </time>
              </span>
              <button
                className="sc-gKsewC ljQRUE SidebarTriggerButton 
          "
                disabled={true}
                onClick={[Function]}
                title="Cannot trigger an update while resource is updating or update is pending."
              />
            </div>
            <div
              className="sc-iqHYGH kQyqCY"
            >
              <div
                aria-describedby={null}
                className="sc-gsTCUz gURyfg isBuilding"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Update: in progress"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-dQppl ffqbbn"
              >
                Updating…
              </div>
            </div>
          </a>
        </li>
        <li
          className="sc-bdfBwQ fKFkSC  isBuilding"
        >
          <button
            className="sc-eCssSg bZRUpx"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-hKgILt diVeFN"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <a
            className="sc-pFZIQ gITkdQ  isBuilding"
            data-name="resource29"
            href="/r/resource29"
            onClick={[Function]}
          >
            <div
              className="sc-kEjbxe ikFKQb"
            >
              <div
                aria-describedby={null}
                className="sc-gsTCUz gURyfg isHealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Server: ready"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-dQppl sc-kstrdz ffqbbn fpKEWH"
                title="resource29"
              >
                <span
                  className="sc-hBEYos jsLRUj"
                >
                  resource29
                </span>
              </div>
              <span
                className="sc-fodVxV cOMzyj"
              >
                <time
                  dateTime="2017-12-21T15:35:38.000Z"
                  title="2017-12-21T15:35:38.000Z"
                >
                  &lt;30s ago
                </time>
              </span>
              <button
                className="sc-gKsewC ljQRUE SidebarTriggerButton 
          "
                disabled={true}
                onClick={[Function]}
                title="Cannot trigger an update while resource is updating or update is pending."
              />
            </div>
            <div
              className="sc-iqHYGH kQyqCY"
            >
              <div
                aria-describedby={null}
                className="sc-gsTCUz gURyfg isBuilding"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Update: in progress"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-dQppl ffqbbn"
              >
                Updating…
              </div>
            </div>
          </a>
        </li>
        <li
          className="sc-bdfBwQ fKFkSC  isBuilding"
        >
          <button
            className="sc-eCssSg bZRUpx"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-hKgILt diVeFN"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <a
            className="sc-pFZIQ gITkdQ  isBuilding"
            data-name="resource39"
            href="/r/resource39"
            onClick={[Function]}
          >
            <div
              className="sc-kEjbxe ikFKQb"
            >
              <div
                aria-describedby={null}
                className="sc-gsTCUz gURyfg isHealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Server: ready"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-dQppl sc-kstrdz ffqbbn fpKEWH"
                title="resource39"
              >
                <span
                  className="sc-hBEYos jsLRUj"
                >
                  resource39
                </span>
              </div>
              <span
                className="sc-fodVxV cOMzyj"
              >
                <time
                  dateTime="2017-12-21T15:35:28.000Z"
                  title="2017-12-21T15:35:28.000Z"
                >
                  &lt;45s ago
                </time>
              </span>
              <button
                className="sc-gKsewC ljQRUE SidebarTriggerButton 
          "
                disabled={true}
                onClick={[Function]}
                title="Cannot trigger an update while resource is updating or update is pending."
              />
            </div>
            <div
              className="sc-iqHYGH kQyqCY"
            >
              <div
                aria-describedby={null}
                className="sc-gsTCUz gURyfg isBuilding"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Update: in progress"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-dQppl ffqbbn"
              >
                Updating…
              </div>
            </div>
          </a>
        </li>
        <li
          className="sc-bdfBwQ fKFkSC  isBuilding"
        >
          <button
            className="sc-eCssSg bZRUpx"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-hKgILt diVeFN"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <a
            className="sc-pFZIQ gITkdQ  isBuilding"
            data-name="resource49"
            href="/r/resource49"
            onClick={[Function]}
          >
            <div
              className="sc-kEjbxe ikFKQb"
            >
              <div
                aria-describedby={null}
                className="sc-gsTCUz gURyfg isHealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Server: ready"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-dQppl sc-kstrdz ffqbbn fpKEWH"
                title="resource49"
              >
                <span
                  className="sc-hBEYos jsLRUj"
                >
                  resource49
                </span>
              </div>
              <span
                className="sc-fodVxV cOMzyj"
              >
                <time
                  dateTime="2017-12-21T15:35:18.000Z"
                  title="2017-12-21T15:35:18.000Z"
                >
                  &lt;1m ago
                </time>
              </span>
              <button
                className="sc-gKsewC ljQRUE SidebarTriggerButton 
          "
                disabled={true}
                onClick={[Function]}
                title="Cannot trigger an update while resource is updating or update is pending."
              />
            </div>
            <div
              className="sc-iqHYGH kQyqCY"
            >
              <div
                aria-describedby={null}
                className="sc-gsTCUz gURyfg isBuilding"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Update: in progress"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-dQppl ffqbbn"
              >
                Updating…
              </div>
            </div>
          </a>
        </li>
        <li
          className="sc-bdfBwQ fKFkSC  isBuilding"
        >
          <button
            className="sc-eCssSg bZRUpx"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-hKgILt diVeFN"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <a
            className="sc-pFZIQ gITkdQ  isBuilding"
            data-name="resource54"
            href="/r/resource54"
            onClick={[Function]}
          >
            <div
              className="sc-kEjbxe ikFKQb"
            >
              <div
                aria-describedby={null}
                className="sc-gsTCUz gURyfg isHealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Server: ready"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-dQppl sc-kstrdz ffqbbn fpKEWH"
                title="resource54"
              >
                <span
                  className="sc-hBEYos jsLRUj"
                >
                  resource54
                </span>
              </div>
              <span
                className="sc-fodVxV cOMzyj"
              >
                <time
                  dateTime="2017-12-21T15:35:13.000Z"
                  title="2017-12-21T15:35:13.000Z"
                >
                  &lt;1m ago
                </time>
              </span>
              <button
                className="sc-gKsewC ljQRUE SidebarTriggerButton 
          "
                disabled={true}
                onClick={[Function]}
                title="Cannot trigger an update while resource is updating or update is pending."
              />
            </div>
            <div
              className="sc-iqHYGH kQyqCY"
            >
              <div
                aria-describedby={null}
                className="sc-gsTCUz gURyfg isBuilding"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Update: in progress"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-dQppl ffqbbn"
              >
                Updating…
              </div>
            </div>
          </a>
        </li>
      </ul>
    </div>
  </div>
  <span />
</nav>
`;

exports[`sidebar renders empty resource list without crashing 1`] = `
<nav
  className="sc-iBPRYJ jNbGZh Sidebar-resources"
>
  <div
    className="sc-fubCfw"
  >
    <div>
      <div
        className="sc-fFubgz hIGdYH"
      >
        
      </div>
      <ul
        className="sc-bkzZxe jjCdaj"
      >
        <li
          className="sc-bdfBwQ sc-crrsfI fKFkSC cKzMdO"
        >
          <a
            className="sc-pFZIQ sc-jrAGrp gITkdQ jSZySy isSelected"
            href="/"
            onClick={[Function]}
          >
            <div
              className="sc-gsTCUz gURyfg isNone"
            >
              <svg>
                checkmark-small.svg
              </svg>
            </div>
            <div
              className="sc-dQppl sc-bqyKva ffqbbn gTLxMz"
            >
              All
            </div>
          </a>
        </li>
      </ul>
    </div>
    <div>
      <div
        className="sc-fFubgz hIGdYH"
      >
        resources
      </div>
      <ul
        className="sc-bkzZxe jjCdaj"
      />
    </div>
  </div>
  <span />
</nav>
`;

exports[`sidebar renders list of resources 1`] = `
<nav
  className="sc-iBPRYJ jNbGZh Sidebar-resources"
>
  <div
    className="sc-fubCfw"
  >
    <div>
      <div
        className="sc-fFubgz hIGdYH"
      >
        
      </div>
      <ul
        className="sc-bkzZxe jjCdaj"
      >
        <li
          className="sc-bdfBwQ sc-crrsfI fKFkSC cKzMdO"
        >
          <a
            className="sc-pFZIQ sc-jrAGrp gITkdQ jSZySy isSelected"
            href="/"
            onClick={[Function]}
          >
            <div
              className="sc-gsTCUz gURyfg isNone"
            >
              <svg>
                checkmark-small.svg
              </svg>
            </div>
            <div
              className="sc-dQppl sc-bqyKva ffqbbn gTLxMz"
            >
              All
            </div>
          </a>
        </li>
      </ul>
    </div>
    <div>
      <div
        className="sc-fFubgz hIGdYH"
      >
        resources
      </div>
      <ul
        className="sc-bkzZxe jjCdaj"
      >
        <li
          className="sc-bdfBwQ fKFkSC  isBuilding"
        >
          <button
            className="sc-eCssSg bZRUpx"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-hKgILt diVeFN"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <a
            className="sc-pFZIQ gITkdQ  isBuilding"
            data-name="vigoda"
            href="/r/vigoda"
            onClick={[Function]}
          >
            <div
              className="sc-kEjbxe ikFKQb"
            >
              <div
                aria-describedby={null}
                className="sc-gsTCUz gURyfg isHealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Server: ready"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-dQppl sc-kstrdz ffqbbn fpKEWH"
                title="vigoda"
              >
                <span
                  className="sc-hBEYos jsLRUj"
                >
                  vigoda
                </span>
              </div>
              <span
                className="sc-fodVxV cOMzyj"
              >
                <time
                  dateTime="2017-12-21T15:36:07.000Z"
                  title="2017-12-21T15:36:07.000Z"
                >
                  &lt;5s ago
                </time>
              </span>
              <button
                className="sc-gKsewC ljQRUE SidebarTriggerButton 
          "
                disabled={true}
                onClick={[Function]}
                title="Cannot trigger an update while resource is updating or update is pending."
              />
            </div>
            <div
              className="sc-iqHYGH kQyqCY"
            >
              <div
                aria-describedby={null}
                className="sc-gsTCUz gURyfg isBuilding"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Update: in progress"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-dQppl ffqbbn"
              >
                Updating…
              </div>
            </div>
          </a>
        </li>
        <li
          className="sc-bdfBwQ fKFkSC  isBuilding"
        >
          <button
            className="sc-eCssSg bZRUpx"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-hKgILt diVeFN"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <a
            className="sc-pFZIQ gITkdQ  isBuilding"
            data-name="snack"
            href="/r/snack"
            onClick={[Function]}
          >
            <div
              className="sc-kEjbxe ikFKQb"
            >
              <div
                aria-describedby={null}
                className="sc-gsTCUz gURyfg isHealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Server: ready"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-dQppl sc-kstrdz ffqbbn fpKEWH"
                title="snack"
              >
                <span
                  className="sc-hBEYos jsLRUj"
                >
                  snack
                </span>
              </div>
              <span
                className="sc-fodVxV cOMzyj"
              >
                <time
                  dateTime="2017-12-21T15:35:57.000Z"
                  title="2017-12-21T15:35:57.000Z"
                >
                  &lt;15s ago
                </time>
              </span>
              <button
                className="sc-gKsewC ljQRUE SidebarTriggerButton 
          "
                disabled={true}
                onClick={[Function]}
                title="Cannot trigger an update while resource is updating or update is pending."
              />
            </div>
            <div
              className="sc-iqHYGH kQyqCY"
            >
              <div
                aria-describedby={null}
                className="sc-gsTCUz gURyfg isBuilding"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Update: in progress"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-dQppl ffqbbn"
              >
                Updating…
              </div>
            </div>
          </a>
        </li>
      </ul>
    </div>
  </div>
  <span />
</nav>
`;

exports[`sidebar renders resources that haven't been built yet 1`] = `
<nav
  className="sc-iBPRYJ jNbGZh Sidebar-resources"
>
  <div
    className="sc-fubCfw"
  >
    <div>
      <div
        className="sc-fFubgz hIGdYH"
      >
        
      </div>
      <ul
        className="sc-bkzZxe jjCdaj"
      >
        <li
          className="sc-bdfBwQ sc-crrsfI fKFkSC cKzMdO"
        >
          <a
            className="sc-pFZIQ sc-jrAGrp gITkdQ jSZySy isSelected"
            href="/"
            onClick={[Function]}
          >
            <div
              className="sc-gsTCUz gURyfg isNone"
            >
              <svg>
                checkmark-small.svg
              </svg>
            </div>
            <div
              className="sc-dQppl sc-bqyKva ffqbbn gTLxMz"
            >
              All
            </div>
          </a>
        </li>
      </ul>
    </div>
    <div>
      <div
        className="sc-fFubgz hIGdYH"
      >
        resources
      </div>
      <ul
        className="sc-bkzZxe jjCdaj"
      >
        <li
          className="sc-bdfBwQ fKFkSC  isBuilding"
        >
          <button
            className="sc-eCssSg bZRUpx"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-hKgILt diVeFN"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <a
            className="sc-pFZIQ gITkdQ  isBuilding"
            data-name="vigoda"
            href="/r/vigoda"
            onClick={[Function]}
          >
            <div
              className="sc-kEjbxe ikFKQb"
            >
              <div
                aria-describedby={null}
                className="sc-gsTCUz gURyfg isHealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Server: ready"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-dQppl sc-kstrdz ffqbbn fpKEWH"
                title="vigoda"
              >
                <span
                  className="sc-hBEYos jsLRUj"
                >
                  vigoda
                </span>
              </div>
              <span
                className="sc-fodVxV cOMzyj"
              >
                —
              </span>
              <button
                className="sc-gKsewC ljQRUE SidebarTriggerButton 
          "
                disabled={true}
                onClick={[Function]}
                title="Cannot trigger an update while resource is updating or update is pending."
              />
            </div>
            <div
              className="sc-iqHYGH kQyqCY"
            >
              <div
                aria-describedby={null}
                className="sc-gsTCUz gURyfg isBuilding"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Update: in progress"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-dQppl ffqbbn"
              >
                Updating…
              </div>
            </div>
          </a>
        </li>
        <li
          className="sc-bdfBwQ fKFkSC  isBuilding"
        >
          <button
            className="sc-eCssSg bZRUpx"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-hKgILt diVeFN"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <a
            className="sc-pFZIQ gITkdQ  isBuilding"
            data-name="snack"
            href="/r/snack"
            onClick={[Function]}
          >
            <div
              className="sc-kEjbxe ikFKQb"
            >
              <div
                aria-describedby={null}
                className="sc-gsTCUz gURyfg isHealthy"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Server: ready"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-dQppl sc-kstrdz ffqbbn fpKEWH"
                title="snack"
              >
                <span
                  className="sc-hBEYos jsLRUj"
                >
                  snack
                </span>
              </div>
              <span
                className="sc-fodVxV cOMzyj"
              >
                —
              </span>
              <button
                className="sc-gKsewC ljQRUE SidebarTriggerButton 
          "
                disabled={true}
                onClick={[Function]}
                title="Cannot trigger an update while resource is updating or update is pending."
              />
            </div>
            <div
              className="sc-iqHYGH kQyqCY"
            >
              <div
                aria-describedby={null}
                className="sc-gsTCUz gURyfg isBuilding"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                title="Update: in progress"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-dQppl ffqbbn"
              >
                Updating…
              </div>
            </div>
          </a>
        </li>
      </ul>
    </div>
  </div>
  <span />
</nav>
`;
